[package]
name = "filed_rs"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
nix = "0.19"
libc = "0.2"
socket2 = "0.3"
anyhow = "1.0"
once_cell = "1.5"